salesforce-main/src/main/default/objects/Account/fields/Industry_Type_SIC__c.field-meta.xml
<CustomField>
    <fullName>Industry_Type_SIC__c</fullName>
    <label>Industry Type (SIC)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A~ Agriculture, forestry and fishing</fullName>
            </value>
            <value>
                <fullName>B~ Mining and quarrying</fullName>
            </value>
            <value>
                <fullName>C~ Manufacturing</fullName>
            </value>
            <value>
                <fullName>D~ Electricity, gas, steam and air conditioning supply</fullName>
            </value>
            <value>
                <fullName>E~ Water supply; sewerage, waste management and remediation activities</fullName>
            </value>
            <value>
                <fullName>F~ Construction</fullName>
            </value>
            <value>
                <fullName>G~ Wholesale and retail trade; repair of motor vehicles and motor cycles</fullName>
            </value>
            <value>
                <fullName>H~ Transport and storage</fullName>
            </value>
            <value>
                <fullName>I~ Accommodation and food service activities</fullName>
            </value>
            <value>
                <fullName>J~ Information and communication</fullName>
            </value>
            <value>
                <fullName>K~ Financial and insurance activities</fullName>
            </value>
            <value>
                <fullName>L~ Real estate activities</fullName>
            </value>
            <value>
                <fullName>M~ Professional, scientific and technical activities</fullName>
            </value>
            <value>
                <fullName>N~ Administrative and support service activities</fullName>
            </value>
            <value>
                <fullName>O~ Public administration and defense; compulsory social security</fullName>
            </value>
            <value>
                <fullName>P~ Education</fullName>
            </value>
            <value>
                <fullName>Q~ Human health and social work activities</fullName>
            </value>
            <value>
                <fullName>R~ Arts, entertainment and recreation</fullName>
            </value>
            <value>
                <fullName>S~ Other service activities</fullName>
            </value>
            <value>
                <fullName>T~ Activities of households as employers; undifferentiated goods and services-producing activities of households for own use</fullName>
            </value>
            <value>
                <fullName>U~ Activities of extraterritorial organizations and bodies</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>