salesforce-main/src/main/default/objects/Account/fields/Intend_to_apply_for_Student_Visa__c.field-meta.xml
<CustomField>
    <fullName>Intend_to_apply_for_Student_Visa__c</fullName>
    <label>Intend to apply for Student Visa</label>
    <length>40</length>
    <type>Text</type>
</CustomField>