salesforce-main/src/main/default/objects/Account/fields/Invoice_Consolidation__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Consolidation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice Consolidation</label>
    <type>Checkbox</type>
</CustomField>