salesforce-main/src/main/default/objects/Account/fields/Invoice_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Delivery__c</fullName>
    <label>Invoice Delivery</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hardcopy</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Portal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>