salesforce-main/src/main/default/objects/Account/fields/Invoice_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Email_Address__c</fullName>
    <label>Invoice Email Address</label>
    <type>Email</type>
</CustomField>