salesforce-main/src/main/default/objects/Account/fields/Invoice_Method__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Method__c</fullName>
    <label>Invoice Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Immediate Invoice</fullName>
            </value>
            <value>
                <fullName>Consolidated Rules</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>