salesforce-main/src/main/default/objects/Account/fields/Invoice_Separation__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Separation__c</fullName>
    <description>Defines the separation rules of the invoice scheduler.</description>
    <inlineHelpText>Applicable to invoicing in arrears. If a value has been selected, a separate invoice will be created based on this value.</inlineHelpText>
    <label>Invoice Separation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Invoice_Separation</valueSetName>
    </valueSet>
</CustomField>