salesforce-main/src/main/default/objects/Account/fields/Invoicing_Type__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Type__c</fullName>
    <label>Invoicing Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Consolidated</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Auto Upload</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>