salesforce-main/src/main/default/objects/Account/fields/Is_Local_Authority_Care__c.field-meta.xml
<CustomField>
    <fullName>Is_Local_Authority_Care__c</fullName>
    <label>Aged 16 to 24 and been in care</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Prefer not to say</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>