salesforce-main/src/main/default/objects/Account/fields/Is_Local_Authority_Care_QA__c.field-meta.xml
<CustomField>
    <fullName>Is_Local_Authority_Care_QA__c</fullName>
    <formula>IF(
  ISBLANK(TEXT(Is_Local_Authority_Care__c)),
  &apos;&apos;,
  &quot;Are you currently aged between 16 and 24 and have ever been in the care of, or looked after by, a local authority?&quot; +
  BR() + BR() +
  TEXT(Is_Local_Authority_Care__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aged 16 to 24 and been in care</label>
    <type>Text</type>
</CustomField>