salesforce-main/src/main/default/objects/Account/fields/Key_Client__c.field-meta.xml
<CustomField>
    <fullName>Key_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this account is a key client</description>
    <label>Key Client?</label>
    <type>Checkbox</type>
</CustomField>