salesforce-main/src/main/default/objects/Account/fields/Key_Client_Potential__c.field-meta.xml
<CustomField>
    <fullName>Key_Client_Potential__c</fullName>
    <description>To record client potential, which would then be recorded in the Client Band field when realised</description>
    <label>Client Band Potential *LEGACY*</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Platinum Plus</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Bronze</fullName>
            </value>
            <value>
                <fullName>Tier 1</fullName>
                <isActive>false</isActive>
                <label>Tier 1</label>
            </value>
            <value>
                <fullName>Tier 2</fullName>
                <isActive>false</isActive>
                <label>Tier 2</label>
            </value>
            <value>
                <fullName>Tier 3</fullName>
                <isActive>false</isActive>
                <label>Tier 3</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>