salesforce-main/src/main/default/objects/Account/fields/Kin_Address__c.field-meta.xml
<CustomField>
    <fullName>Kin_Address__c</fullName>
    <label>Kin Address</label>
    <type>TextArea</type>
</CustomField>