salesforce-main/src/main/default/objects/Account/fields/Kin_city__c.field-meta.xml
<CustomField>
    <fullName>Kin_city__c</fullName>
    <label>Kin City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>