salesforce-main/src/main/default/objects/Account/fields/kin_contact_telephone__c.field-meta.xml
<CustomField>
    <fullName>kin_contact_telephone__c</fullName>
    <label>Kin Contact Telephone</label>
    <type>Phone</type>
</CustomField>