salesforce-main/src/main/default/objects/Account/fields/kin_country__c.field-meta.xml
<CustomField>
    <fullName>kin_country__c</fullName>
    <label>Kin Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>