salesforce-main/src/main/default/objects/Account/fields/kin_email__c.field-meta.xml
<CustomField>
    <fullName>kin_email__c</fullName>
    <label>Kin Email</label>
    <type>Email</type>
</CustomField>