salesforce-main/src/main/default/objects/Account/fields/kin_name__c.field-meta.xml
<CustomField>
    <fullName>kin_name__c</fullName>
    <label>Kin Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>