salesforce-main/src/main/default/objects/Account/fields/kin_postcode__c.field-meta.xml
<CustomField>
    <fullName>kin_postcode__c</fullName>
    <label>Kin Postcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>