salesforce-main/src/main/default/objects/Account/fields/Kin_Region__c.field-meta.xml
<CustomField>
    <fullName>Kin_Region__c</fullName>
    <label>Kin Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>