salesforce-main/src/main/default/objects/Account/fields/Laptop_meeting_minimum_tech_specs__c.field-meta.xml
<CustomField>
    <fullName>Laptop_meeting_minimum_tech_specs__c</fullName>
    <description>Data to be able to capture against a student account by an agent, enrolment officer or engagement officer</description>
    <label>Laptop meeting minimum tech specs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>