salesforce-main/src/main/default/objects/Account/fields/Last_Lead_Forensics_Action_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Lead_Forensics_Action_Date__c</fullName>
    <description>Date that the last time a Lead Forensics visit action was set for user</description>
    <label>Last Lead Forensics Action Date</label>
    <type>Date</type>
</CustomField>