salesforce-main/src/main/default/objects/Account/fields/Learning_Support_Details_Clone__c.field-meta.xml
<CustomField>
    <fullName>Learning_Support_Details_Clone__c</fullName>
    <description>Clone of contact field used for person accounts to enable use with account triggered workflows. Read-Only field</description>
    <label>Learning Support Details Clone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>