salesforce-main/src/main/default/objects/Account/fields/Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity__c</fullName>
    <label>Legal Entity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>UC~COL</fullName>
            </value>
            <value>
                <fullName>UC~WEB</fullName>
            </value>
            <value>
                <fullName>LEGAL~CEU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>