salesforce-main/src/main/default/objects/Account/fields/Legal_Entity_Code__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_Code__c</fullName>
    <formula>RIGHT(TEXT(Legal_Entity__c), 3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legal Entity Code</label>
    <type>Text</type>
</CustomField>