salesforce-main/src/main/default/objects/Account/fields/Levy_pot__c.field-meta.xml
<CustomField>
    <fullName>Levy_pot__c</fullName>
    <description>Legacy Migration</description>
    <label>Levy pot</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-100k</fullName>
            </value>
            <value>
                <fullName>100k - 250k</fullName>
            </value>
            <value>
                <fullName>250k - 500k</fullName>
            </value>
            <value>
                <fullName>500k - 1M</fullName>
            </value>
            <value>
                <fullName>1M+</fullName>
            </value>
            <value>
                <fullName>2M+</fullName>
            </value>
            <value>
                <fullName>5M+</fullName>
            </value>
            <value>
                <fullName>0</fullName>
                <isActive>false</isActive>
                <label>0</label>
            </value>
            <value>
                <fullName>1,100,000</fullName>
                <isActive>false</isActive>
                <label>1,100,000</label>
            </value>
            <value>
                <fullName>1,250,000</fullName>
                <isActive>false</isActive>
                <label>1,250,000</label>
            </value>
            <value>
                <fullName>1,250.00</fullName>
                <isActive>false</isActive>
                <label>1,250.00</label>
            </value>
            <value>
                <fullName>1,343,250</fullName>
                <isActive>false</isActive>
                <label>1,343,250</label>
            </value>
            <value>
                <fullName>1,500,000</fullName>
                <isActive>false</isActive>
                <label>1,500,000</label>
            </value>
            <value>
                <fullName>1.5m</fullName>
                <isActive>false</isActive>
                <label>1.5m</label>
            </value>
            <value>
                <fullName>10,000,000</fullName>
                <isActive>false</isActive>
                <label>10,000,000</label>
            </value>
            <value>
                <fullName>10000</fullName>
                <isActive>false</isActive>
                <label>10000</label>
            </value>
            <value>
                <fullName>100000</fullName>
                <isActive>false</isActive>
                <label>100000</label>
            </value>
            <value>
                <fullName>1000000</fullName>
                <isActive>false</isActive>
                <label>1000000</label>
            </value>
            <value>
                <fullName>1100000</fullName>
                <isActive>false</isActive>
                <label>1100000</label>
            </value>
            <value>
                <fullName>120000</fullName>
                <isActive>false</isActive>
                <label>120000</label>
            </value>
            <value>
                <fullName>1200000</fullName>
                <isActive>false</isActive>
                <label>1200000</label>
            </value>
            <value>
                <fullName>12000000</fullName>
                <isActive>false</isActive>
                <label>12000000</label>
            </value>
            <value>
                <fullName>125,000</fullName>
                <isActive>false</isActive>
                <label>125,000</label>
            </value>
            <value>
                <fullName>125000</fullName>
                <isActive>false</isActive>
                <label>125000</label>
            </value>
            <value>
                <fullName>13,000,000</fullName>
                <isActive>false</isActive>
                <label>13,000,000</label>
            </value>
            <value>
                <fullName>1350000</fullName>
                <isActive>false</isActive>
                <label>1350000</label>
            </value>
            <value>
                <fullName>15000</fullName>
                <isActive>false</isActive>
                <label>15000</label>
            </value>
            <value>
                <fullName>150000</fullName>
                <isActive>false</isActive>
                <label>150000</label>
            </value>
            <value>
                <fullName>1500000</fullName>
                <isActive>false</isActive>
                <label>1500000</label>
            </value>
            <value>
                <fullName>160000</fullName>
                <isActive>false</isActive>
                <label>160000</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>