salesforce-main/src/main/default/objects/Account/fields/List_Prices_Editable_by_Default__c.field-meta.xml
<CustomField>
    <fullName>List_Prices_Editable_by_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>By default can prices be edited for the account on the quote</description>
    <inlineHelpText>Sets the List Prices Editable? field on the quote</inlineHelpText>
    <label>List Prices Editable by Default?</label>
    <type>Checkbox</type>
</CustomField>