salesforce-main/src/main/default/objects/Account/fields/Loan__c.field-meta.xml
<CustomField>
    <fullName>Loan__c</fullName>
    <description>Indicates student has received a loan.</description>
    <label>Loan</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Investec</fullName>
            </value>
            <value>
                <fullName>CDL</fullName>
            </value>
            <value>
                <fullName>SFE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>