salesforce-main/src/main/default/objects/Account/fields/Locked__c.field-meta.xml
<CustomField>
    <fullName>Locked__c</fullName>
    <label>Locked</label>
    <summaryFilterItems>
        <field>Opportunity.Locked__c</field>
        <operation>equals</operation>
        <value>true</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>