salesforce-main/src/main/default/objects/Account/fields/Manual_Invoicing__c.field-meta.xml
<CustomField>
    <fullName>Manual_Invoicing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indication that this customer is going to receive manual invoices. This means that all related Orders that are related to this Account record with a SOLD-TO relationship, will be put in the &apos;manual&apos; invoicing batch. The only way to trigger invoicing for these orders, is by using this batch or manually creating the invoices.</description>
    <inlineHelpText>Will set all related SOLD-TO Orders to the Manual Invoicing batch, allowing them to be processed by the manual invoicing only.</inlineHelpText>
    <label>Manual Invoicing</label>
    <type>Checkbox</type>
</CustomField>