salesforce-main/src/main/default/objects/Account/fields/Membership_End__c.field-meta.xml
<CustomField>
    <fullName>Membership_End__c</fullName>
    <description>[BD] Predates Apollo Salesforce team.  5/11/11</description>
    <label>Membership End</label>
    <type>Date</type>
</CustomField>