salesforce-main/src/main/default/objects/Account/fields/Membership_Start__c.field-meta.xml
<CustomField>
    <fullName>Membership_Start__c</fullName>
    <description>[BD] Predates Apollo Salesforce team.  5/11/11</description>
    <label>Membership Start</label>
    <type>Date</type>
</CustomField>