salesforce-main/src/main/default/objects/Account/fields/mh_Our_Strategic_Strengths__c.field-meta.xml
<CustomField>
    <fullName>mh_Our_Strategic_Strengths__c</fullName>
    <description>SAM Integration</description>
    <label>Our Strategic Strengths</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>