salesforce-main/src/main/default/objects/Account/fields/MS_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>MS_Date_of_Birth__c</fullName>
    <description>This field is overwritten by workflow every time a student account is updated.  It copies the birthdate field from the contact table into this field on the account table.  This is required for the cross-object formula that determines microsite eligibility on the opportunity.</description>
    <label>MS Date of Birth</label>
    <type>Date</type>
</CustomField>