salesforce-main/src/main/default/objects/Account/fields/National_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>National_ID_Number__c</fullName>
    <label>National ID Number</label>
    <length>16</length>
    <type>Text</type>
</CustomField>