salesforce-main/src/main/default/objects/Account/fields/Neptune_Student_Id__c.field-meta.xml
<CustomField>
    <fullName>Neptune_Student_Id__c</fullName>
    <description>Unique ID for Neptune</description>
    <label>Neptune Student Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>