salesforce-main/src/main/default/objects/Account/fields/On_Hold__c.field-meta.xml
<CustomField>
    <fullName>On_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the Account is on hold. Will prevent the creation of bookings related to orders of this account.</description>
    <inlineHelpText>Indicates that the Account is on hold. Will prevent the creation of bookings related to orders of this account.</inlineHelpText>
    <label>On Hold</label>
    <type>Checkbox</type>
</CustomField>