salesforce-main/src/main/default/objects/Account/fields/Opportunity_Applications_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Applications_Accepted__c</fullName>
    <description>Calculates the number of opportunities accepted (for UCAS, only unconditional offers).  Influences student status field.</description>
    <label>Opportunity Applications Accepted</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Accepted - Pmt Pending, Accepted - Pmt Received, Accepted - Unconditional Firm, Accepted - Unconditional Insurance</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>