salesforce-main/src/main/default/objects/Account/fields/Opportunity_Applications_in_Progress__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Applications_in_Progress__c</fullName>
    <description>Calculates number of applications in progress (includes conditional acceptances from UCAS).  Influences student status field.</description>
    <label>Opportunity Applications in Progress</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Application, Review, Conditional Offer, Accepted - Unconditional Firm, Accepted - Unconditional Insurance</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>