salesforce-main/src/main/default/objects/Account/fields/Opportunity_Interests_Declines__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Interests_Declines__c</fullName>
    <description>Calculates number of opportunities interests or non-accepts.  Influences student status field.</description>
    <label>Opportunity Interests / Declines</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Deferred Entry, Lapsed Offer, Not Offered, Declined, Cancelled, Declined - Conditional, Declined - Unconditional, Shop, Appointment, No Longer Interested</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>