salesforce-main/src/main/default/objects/Account/fields/Other_Primary_Learning_Difficulty__c.field-meta.xml
<CustomField>
    <fullName>Other_Primary_Learning_Difficulty__c</fullName>
    <description>Given as part of an Application Request - Captures a primary learning difficulty that is not represented in the enum values.</description>
    <label>Other Primary Learning Difficulty</label>
    <length>255</length>
    <type>Text</type>
</CustomField>