salesforce-main/src/main/default/objects/Account/fields/Other_Secondary_Learning_Difficulty__c.field-meta.xml
<CustomField>
    <fullName>Other_Secondary_Learning_Difficulty__c</fullName>
    <description>Secondary learning difficulties involve various challenges that extend beyond primary learning difficulties.</description>
    <label>Other Secondary Learning Difficulty</label>
    <length>255</length>
    <type>Text</type>
</CustomField>