salesforce-main/src/main/default/objects/Account/fields/Parents_have_HE_Quals__c.field-meta.xml
<CustomField>
    <fullName>Parents_have_HE_Quals__c</fullName>
    <description>This field records information about whether a student&apos;s parents have higher education qualifications</description>
    <inlineHelpText>This field records information about whether a student&apos;s parents have higher education qualifications</inlineHelpText>
    <label>Parents have HE Quals?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01~ Yes</fullName>
            </value>
            <value>
                <fullName>02~ No</fullName>
            </value>
            <value>
                <fullName>03~ No response given</fullName>
            </value>
            <value>
                <fullName>97~ Not known</fullName>
            </value>
            <value>
                <fullName>98~ Prefer not to say</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>