salesforce-main/src/main/default/objects/Account/fields/Passport_Copy_Expected_Date__c.field-meta.xml
<CustomField>
    <fullName>Passport_Copy_Expected_Date__c</fullName>
    <label>Passport Copy Expected Date</label>
    <type>Date</type>
</CustomField>