salesforce-main/src/main/default/objects/Account/fields/Pays_Into_Apprenticeship_Levy__c.field-meta.xml
<CustomField>
    <fullName>Pays_Into_Apprenticeship_Levy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Capture information about the Levy status of a Client Account</description>
    <label>Pays into the apprenticeship levy?</label>
    <type>Checkbox</type>
</CustomField>