salesforce-main/src/main/default/objects/Account/fields/PO_Number_Required__c.field-meta.xml
<CustomField>
    <fullName>PO_Number_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the account require a PO number? This will ensure all orders associated with the account enforce a PO to be entered on all associated bookings</description>
    <inlineHelpText>This will ensure all orders associated with the account enforce a PO to be entered on all associated bookings</inlineHelpText>
    <label>PO Number Required?</label>
    <type>Checkbox</type>
</CustomField>