salesforce-main/src/main/default/objects/Account/fields/Preferred_Courier__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Courier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preferred Courier</label>
    <referenceTo>Courier__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>